# touhou_music_extractor

./: Cargo.toml  README.md  th10.bgm
bgminfo/: adjust_bgminfo.js  th06.bgm  th07.bgm  th08.bgm  th09.bgm  th095.bgm  th10.bgm  th11.bgm  th12.bgm  th125.bgm  th128.bgm  th13.bgm  th14.3.bgm  th14.bgm  th15.bgm  th16.5.bgm  th16.bgm  th17.bgm  th18.5.bgm  th18.bgm
bgminfo/original/: th06.bgm  th07.bgm  th08.bgm  th095.bgm  th10.bgm  th125.bgm  th128.bgm  th13.bgm  th16.bgm
src/: bgminfo.rs  bgmstore.rs  core.rs  main.rs  wavheader.rs
