[package]
name = "touhou_music_extractor"
version = "0.1.0"
authors = ["lyons <hi@klyons.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
nom = "6.0"
serde = {version = "1.0", features = ["derive"]}