[package]
name = "touhou_music_extractor"
version = "0.1.0"
authors = ["lyons <hi@klyons.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
byteorder = "1.3"
regex = "1"
serde = {version = "1.0", features = ["derive"]}
structopt = "0.3"
toml = "0.5"