[package]
name = "touhou_music_extractor"
version = "0.1.0"
authors = ["lyons <hi@klyons.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "thme"
path = "src/main.rs"

[dependencies]
bincode = "1.3"
byteorder = "1.3"
colored = "1.9"
parse_duration = "2.1"
regex = "1"
rust-embed = "5.6"
serde = {version = "1.0", features = ["derive"]}
string_template = "0.2"
structopt = "0.3"
toml = "0.5"